Before final Submit